SleepTracker/public/css/sidebarstyle.css
/*
    DEMO STYLE
*/

@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
body {
    font-family: 'Poppins', sans-serif;
    background: #777777;
}

p {
    font-family: 'Poppins', sans-serif;
    font-size: 1.1em;
    font-weight: 300;
    line-height: 1.7em;
    color: #999;
}

a,
a:hover,
a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

.navbar {
    height: 60px;
    padding: 15px 10px;
    background: #fff;
    border: none;
    border-radius: 0;
    margin-bottom: 40px;
    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
}

.navbar a{
    font-size: 30px;
}

.navbar-btn {
    box-shadow: none;
    outline: none !important;
    border: none;
}

.line {
    width: 100%;
    height: 1px;
    border-bottom: 1px dashed #ddd;
    margin: 40px 0;
}

/* ---------------------------------------------------
    SIDEBAR STYLE
----------------------------------------------------- */

.wrapper {
    display: flex;
    width: 100%;
}

#sidebar {
    width: 300px;
    position: fixed;
    top: 60px;
    left: 0;
    height: 100vh;
    z-index: 999;
    background: #777777;
    color: #fff;
    transition: all 0.3s;
}

#sidebar.active {
    margin-left: -380px;
}

#sidebar .sidebar-header {
    padding: 20px;
    background: #777777;
}

#sidebar ul.components {
    padding: 50px 20px 50px 50px;
    border-right: 1px solid #ffffff;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 30px;
    font-size: 1.1em;
    display: block;
}

#sidebar ul li a:hover {
    color: #777777;
    background: #fff;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
    color: #fff;
    background: #777777;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
    display: block;
    position: absolute;
    top: 50%;
    right: 20px;
    transform: translateY(-50%);
}

ul ul a {
    font-size: 0.9em !important;
    padding-left: 30px !important;
    background: rgb(119, 119, 119);
}

ul.CTAs {
    padding: 20px;
}

ul.CTAs a {
    text-align: center;
    font-size: 0.9em !important;
    display: block;
    border-radius: 5px;
    margin-bottom: 5px;
}

/* ---------------------------------------------------
    CONTENT STYLE
----------------------------------------------------- */

#content {
    width: calc(100% - 380px);
    margin-right: 50px;
    min-height: 100vh;
    transition: all 0.3s;
    position: absolute;
    top: 150px;
    right: 0;
}

#content.active {
    width: 100%;
}

/* ---------------------------------------------------
    HEADING STYLE
----------------------------------------------------- */

#heading {
    width: 100%;
    height: 10%;
    padding: 0;
    transition: all 0.3s;
    position: absolute;
    top: 0;
    right: 0;
}

/* ---------------------------------------------------
    MEDIAQUERIES
----------------------------------------------------- */

@media (max-width: 768px) {
    #sidebar {
        margin-left: -400px;
    }
    #sidebar.active {
        left: 50px;
        margin-left: 0;
    }
    #heading {
        width: 100%;
    }
    #heading.active {
        width: 100%;
    }
    #sidebarCollapse span {
        display: none;
    }
    #accountButton span{
        display:none;
    }
    #content {
        width: 100%;
        left: 5px;
        margin-left: 0;
    }
}

